feat(env): add additional GROQ API key for enhanced functionality

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ TELEGRAM_TOKEN=8370821354:AAGrS_6j6Sz_16iQYYxNrn6ZIdrMI5oEqKE
 ADMIN_IDS=1148031284,1058749165
 
 # Groq APIs (Pon todas las que quieras separadas por comas)
-GROQ_API_KEYS=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,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,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
+GROQ_API_KEYS=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,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,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,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
 
 # Configuración del Bot
 MODEL_NAME=llama-3.3-70b-versatile
