--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ ADMIN_IDS=1148031284,1058749165
 GROQ_API_KEYS=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,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,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,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,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
 
 # Configuración del Bot
-MODEL_NAME=llama-3.3-70b-versatile
+MODEL_NAME=openai/gpt-oss-120b
 MAX_HISTORY=10
