chore(data): Update user context, API stats, settings, and add bot activity log
Changes include:
- Updated API usage statistics in api_stats.json
- Added bot activity log with recent interactions in bot_activity.log
- Changed user conversation history in user_context.json
- Updated user settings with model and agent preferences in user_settings.json

--- a/data/user_settings.json
+++ b/data/user_settings.json
@@ -1,5 +1,10 @@
 {
   "1058749165": {
-    "model": "llama-3.1-8b-instant"
+    "model": "openai/gpt-oss-120b",
+    "agent": "general"
+  },
+  "1148031284": {
+    "agent": "general",
+    "model": "openai/gpt-oss-120b"
   }
 }
